# raylib-game-of-life

./: CMakeLists.txt  README.md
src/: grid.cpp  grid.h  main.cpp  sidebar.cpp  sidebar.h
tests/: test_grid.cpp
